samples/_failures_safe/1761458077_b6cade_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f42ee939.c: In function ‘main’:
./samples/SAFE/__tmp_f42ee939.c:179:21: error: expected ‘)’ at end of input
  179 |                token
      |                     ^
      |                     )
./samples/SAFE/__tmp_f42ee939.c:177:15: note: to match this ‘(’
  177 |         printf("%-12s %-12s %-8d %-8d\n",
      |               ^
./samples/SAFE/__tmp_f42ee939.c:179:16: error: expected declaration or statement at end of input
  179 |                token
      |                ^~~~~
./samples/SAFE/__tmp_f42ee939.c:179:16: error: expected declaration or statement at end of input
